# ros-speech

./: .ycm_extra_conf.py  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/pre_processer/: OneChannelDataset.h
devel/lib/pkgconfig/: asr.pc  nlu.pc  player.pc  pre_processer.pc  tts.pc
devel/lib/pre_processer/: pre_processer
devel/lib/python2.7/dist-packages/pre_processer/msg/: _OneChannelDataset.py  __init__.py
devel/share/asr/cmake/: asrConfig.cmake
devel/share/common-lisp/ros/pre_processer/msg/: OneChannelDataset.lisp  _package.lisp  _package_OneChannelDataset.lisp  pre_processer-msg.asd
devel/share/nlu/cmake/: nluConfig.cmake
devel/share/player/cmake/: playerConfig.cmake
devel/share/pre_processer/cmake/: pre_processer-msg-paths.cmake  pre_processerConfig.cmake
devel/share/tts/cmake/: ttsConfig.cmake
src/asr/: CMakeLists.txt  package.xml
src/asr/cfg/: config.json
src/asr/include/asr/xunfei/lib/: ASR.h  ConfigResolver.cpp  ConfigResolver.h  XFonlineasr.cpp  XFonlineasr.h  XFwakeup.h  xfparams.h
src/asr/launch/: asr.launch
src/asr/msg/: IsWakeup.msg
src/asr/node/: xfs_block_node.cpp  xfs_file_node.cpp  xfs_wakeup_node.cpp
src/doc/: 2-依赖库安装.md  3-系统存在的Bug.md  4-使用说明.md  依赖库安装.md  系统存在的Bug.md  规范.md
src/nlu/: CMakeLists.txt  package.xml
src/nlu/launch/: nlu.launch
src/nlu/msg/: IsPlayMusic.msg
src/nlu/node/: ChatRobot.py  KeyWordExtract.py  SearchMusic.py  is_music_client.py  is_music_srv.py  partical_node.py  play_or_chat.py
src/nlu/script/: create_musicdb.sql
src/nlu/script/analise/: get_song_singer.py  musician.txt  participle.py  songs.txt
src/nlu/script/analise/sql/: music.sql
src/nlu/script/training/: prepare_data.py  test.py  train.py
src/nlu/script/training/dataset/: music.txt
src/nlu/script/training/dataset/model/converter/: feat_gen.config.pickle  text_prep.config.pickle
src/nlu/script/training/dataset/model/learner/: liblinear_model
src/nlu/script/training/dataset/test/: chat.txt
src/nlu/script/training/dataset/train/: chat.txt  music.txt
src/nlu/script/training/model/: id
src/nlu/script/training/model/converter/: feat_gen.config.pickle  text_prep.config.pickle
src/nlu/script/training/model/learner/: liblinear_model
src/nlu/script/training/sample/: id
src/nlu/script/training/sample/converter/: class_map.config.pickle  feat_gen.config.pickle  text_prep.config.pickle
src/nlu/script/training/sample/learner/: liblinear_model
src/nlu/srv/: IsMusic.srv
src/player/: CMakeLists.txt  package.xml
src/player/launch/: player.launch
src/player/node/: player.cpp
src/pre_processer/: CMakeLists.txt  package.xml
src/pre_processer/include/pre_processer/: BDeviceParam.hpp  Bvad.hpp  FeatureSet.hpp  HanMingWin.hpp  MfccVad.hpp  NormalMic.hpp  PreEmphasis.hpp
src/pre_processer/include/pre_processer/brige/: DataOrganizer.hpp
src/pre_processer/launch/: preprocess.launch
src/pre_processer/msg/: Asrdata.msg  OneChannelDataset.msg
src/pre_processer/node/: asr_brige_node.cpp  preprocess_node.cpp
src/pre_processer/script/: drawfile.py
src/rs_system/: CMakeLists.txt  package.xml
src/rs_system/launch/: system.launch
src/tts/: CMakeLists.txt
src/tts/launch/: music.txt  tts.launch
src/tts/node/: BDTTS.py  FileManager.py  bd_tts.py
